third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/binary_gt.exp
module 0x8675309::M {
    struct R {
        f: u64,
    }
    fun t0(x: u64, r: R) {
        x > x;
        *&(&r).f > *&(&r).f;
        if (1 > *&(&r).f) *&(&r).f > 0;
        let R{f: _t23} = r;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: expected expression with no value but found `bool`
  ┌─ binary_gt.move:8:9
  │
8 │         if (1 > *&(&r).f) *&(&r).f > 0;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
